# rollcall

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  flake.nix
.github/workflows/: ci.yml
crates/rollcall/: Cargo.toml  clippy.toml
crates/rollcall-facts/: Cargo.toml
crates/rollcall-facts/src/: collect.rs  error.rs  lib.rs  parse.rs  reconcile.rs  schema.rs
crates/rollcall-facts/src/parse/: tests.rs
crates/rollcall-facts/src/reconcile/: tests.rs
crates/rollcall-inventory/: Cargo.toml
crates/rollcall-inventory/src/: capex.rs  devices.rs  error.rs  lib.rs  load.rs  probes.rs  registry.rs  site.rs  thermal.rs  workloads.rs
crates/rollcall-inventory/src/capex/: tests.rs
crates/rollcall-inventory/src/devices/: tests.rs
crates/rollcall-inventory/src/probes/: tests.rs
crates/rollcall-inventory/src/registry/: tests.rs
crates/rollcall-inventory/src/site/: tests.rs
crates/rollcall-inventory/src/thermal/: tests.rs
crates/rollcall-inventory/src/workloads/: tests.rs
crates/rollcall-inventory/tests/fixtures/finance/: capex.toml
crates/rollcall-inventory/tests/fixtures/inventory/: devices.toml  probes.toml  site.toml  workloads.toml
crates/rollcall-inventory/tests/fixtures/thermal/: thermal.toml
crates/rollcall-netbox/: Cargo.toml
crates/rollcall-netbox/src/: canonical.rs  declared.rs  error.rs  lib.rs  logical.rs  pull.rs  restore.rs
crates/rollcall-netbox/src/canonical/: tests.rs
crates/rollcall-netbox/src/declared/: tests.rs
crates/rollcall-netbox/src/logical/: tests.rs
crates/rollcall-netbox/src/pull/: tests.rs
crates/rollcall-netbox/src/restore/: tests.rs
crates/rollcall-report/: Cargo.toml
crates/rollcall-report/src/: compile.rs  document.rs  editorial.rs  error.rs  inputs.rs  lib.rs  narrative.rs  power.rs  risk.rs  sections.rs  tex.rs
crates/rollcall-report/src/editorial/: tests.rs
crates/rollcall-report/src/narrative/: tests.rs
crates/rollcall-report/src/power/: tests.rs
crates/rollcall-report/src/risk/: tests.rs
crates/rollcall-report/src/sections/: tests.rs
crates/rollcall-report/src/tex/: tests.rs
crates/rollcall-report/tests/: golden_report.rs
crates/rollcall-report/tests/fixtures/: expected.tex
crates/rollcall-report/tests/fixtures/repo/reports/editorial/: architecture.tex  executive-summary.tex  findings.tex  status-note.tex  topology-note.tex  workloads-note.tex
crates/rollcall-status/: Cargo.toml
crates/rollcall-status/src/: lib.rs  probe.rs  snapshot.rs
crates/rollcall-status/src/probe/: tests.rs
crates/rollcall-status/src/snapshot/: tests.rs
crates/rollcall-status/tests/: golden_snapshot.rs
crates/rollcall-status/tests/fixtures/status/: 2026-07-01.json  2026-07-02.json
crates/rollcall/src/: declared.rs  facts.rs  main.rs  netbox.rs  output.rs  reconcile.rs  repo.rs  report.rs  status.rs  validate.rs
crates/rollcall/src/netbox/: tests.rs
crates/rollcall/tests/: broken_pipe.rs
