# rollcall: Rust tooling to reconcile a declared fleet against observed reality.

[workspace]
resolver = "3"
members = [
    "crates/rollcall-facts",
    "crates/rollcall-inventory",
    "crates/rollcall-netbox",
    "crates/rollcall-report",
    "crates/rollcall-status",
    "crates/rollcall",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
rollcall-facts = { path = "crates/rollcall-facts" }
rollcall-inventory = { path = "crates/rollcall-inventory" }
rollcall-netbox = { path = "crates/rollcall-netbox" }
rollcall-report = { path = "crates/rollcall-report" }
rollcall-status = { path = "crates/rollcall-status" }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
disallowed_types = "deny"
let_underscore_must_use = "deny"
let_underscore_future = "deny"
await_holding_lock = "deny"
