[package]
name = "rollcall-facts"
description = "Read-only hardware fact collection over SSH and declared-vs-actual reconciliation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rollcall-inventory = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[lints]
workspace = true
