[package]
name = "rollcall-inventory"
description = "Typed access to the fleet inventory TOML files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
