[package]
name = "rollcall-report"
description = "Render the branded infrastructure PDF report from declared data and status snapshots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rollcall-inventory = { workspace = true }
rollcall-status = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
