[package]
name = "rollcall-status"
description = "Probe the fleet and record dated status snapshots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rollcall-inventory = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }

[lints]
workspace = true
