[package]
name = "rollcall"
description = "Reconcile a declared fleet against observed reality: evidence sweeps, drift, and a NetBox git-escrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rollcall-facts = { workspace = true }
rollcall-inventory = { workspace = true }
rollcall-netbox = { workspace = true }
rollcall-report = { workspace = true }
rollcall-status = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
